manifests/incubator-manifests/incubator/gocd/output.yaml
[debug] Created tunnel using local port: '45943'

[debug] SERVER: "127.0.0.1:45943"

[debug] Original chart version: ""
[debug] CHART PATH: /home/matt/go/src/k8s.io/charts/incubator/gocd

NAME:   turbulent-bunny
REVISION: 1
RELEASED: Sat Jun  2 14:58:58 2018
CHART: gocd-0.2.5
USER-SUPPLIED VALUES:
{}

COMPUTED VALUES:
agent:
  env:
    agentAutoRegisterEnvironemnts: null
    agentAutoRegisterHostname: null
    agentAutoRegisterKey: null
    agentAutoRegisterResources: null
    goAgentBootstrapperArgs: null
    goAgentBootstrapperJvmArgs: null
    goAgentSystemProperties: null
    goServerUrl: null
  healthCheck:
    enabled: false
    failureThreshold: 60
    initialDelaySeconds: 60
    periodSeconds: 60
  image:
    pullPolicy: IfNotPresent
    repository: gocd/gocd-agent-alpine-3.6
    tag: null
  nodeSelector: {}
  persistence:
    accessMode: ReadWriteOnce
    enabled: false
    existingClaim: null
    pvSelector: null
    size: 1Gi
    subpath:
      dockerEntryPoint: scripts
      homego: homego
  replicaCount: 0
  resources: {}
rbac:
  apiVersion: v1beta1
  create: true
  roleRef: null
server:
  enabled: true
  env:
    extraEnvVars:
    - name: GOCD_PLUGIN_INSTALL_kubernetes-elastic-agents
      value: https://github.com/gocd/kubernetes-elastic-agents/releases/download/v0.0.1/kubernetes-elastic-agent-0.0.1-0.jar
    goServerSystemProperties: null
  healthCheck:
    failureThreshold: 10
    initialDelaySeconds: 90
    periodSeconds: 15
  image:
    pullPolicy: IfNotPresent
    repository: gocd/gocd-server
    tag: null
  ingress:
    enabled: true
  nodeSelector: {}
  persistence:
    accessMode: ReadWriteOnce
    enabled: true
    existingClaim: null
    pvSelector: null
    size: 2Gi
    subpath:
      dockerEntryPoint: scripts
      godata: godata
      homego: homego
  resources: {}
  service:
    httpPort: 8153
    httpsPort: 8154
    nodeHttpPort: null
    nodeHttpsPort: null
    type: NodePort
serviceAccount:
  create: true
  name: null

HOOKS:
---
# turbulent-bunny-gocd-test-vsnje
apiVersion: v1
kind: Pod
metadata:
  name: "turbulent-bunny-gocd-test-vsnje"
  labels:
    app: gocd
    chart: "gocd-0.2.5"
    release: "turbulent-bunny"
    heritage: "Tiller"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: gocd-ui-test
      image: "gocddev/gocd-helm-build:v0.1.0"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  volumes:
    - name: tests
      configMap:
        name: turbulent-bunny-gocd-tests
    - name: tools
      emptyDir: {}
  restartPolicy: Never
MANIFEST:

---
# Source: gocd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turbulent-bunny-gocd-server
  annotations:
  labels:
    app: gocd
    chart: "gocd-0.2.5"
    release: "turbulent-bunny"
    heritage: "Tiller"
    component: server
spec:
  type: NodePort
  ports:
    - port: 8153
      targetPort: 8153
      protocol: TCP
      name: http

    - port: 8154
      targetPort: 8154
      protocol: TCP
      name: https
  selector:
    app: gocd
    release: "turbulent-bunny"
    component: server
---
# Source: gocd/templates/gocd-agent-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: turbulent-bunny-gocd-agent
  labels:
    app: gocd
    chart:  "gocd-0.2.5"
    release: "turbulent-bunny"
    heritage: "Tiller"
    component: agent
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gocd
      release: "turbulent-bunny"
      component: agent
  template:
    metadata:
      labels:
        app: gocd
        release: "turbulent-bunny"
        component: agent
    spec:
      containers:
        - name: gocd-agent
          image: "gocd/gocd-agent-alpine-3.6:v18.1.0"
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
---
# Source: gocd/templates/gocd-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: turbulent-bunny-gocd-server
  labels:
    app: gocd
    chart: "gocd-0.2.5"
    release: "turbulent-bunny"
    heritage: "Tiller"
    component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gocd
      release: "turbulent-bunny"
      component: server
  template:
    metadata:
      labels:
        app: gocd
        release: "turbulent-bunny"
        component: server
    spec:
      volumes:
        - name: goserver-vol
          persistentVolumeClaim:
            claimName: turbulent-bunny-gocd-server
      containers:
        - name: gocd-server
          image: "gocd/gocd-server:v18.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8153
            - containerPort: 8154
          livenessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: goserver-vol
              mountPath: /godata
              subPath: godata
            - name: goserver-vol
              mountPath: /home/go
              subPath: homego
            - name: goserver-vol
              mountPath: /docker-entrypoint.d
              subPath: scripts
          resources:
            {}
---
# Source: gocd/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: turbulent-bunny-gocd-server
  labels:
    app: gocd
    chart: "gocd-0.2.5"
    release: "turbulent-bunny"
    heritage: "Tiller"
    component: server
  annotations:
spec:
  backend:
    serviceName: turbulent-bunny-gocd-server
    servicePort: 8153
  rules:
